<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.marid</groupId>
    <artifactId>marid</artifactId>
    <version>0.9.8.8-SNAPSHOT</version>
  </parent>

  <artifactId>marid-types</artifactId>

  <properties>
    <java.version>11</java.version>
    <tests.opens>--add-opens marid.types/org.marid.types=ALL-UNNAMED</tests.opens>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.marid</groupId>
      <artifactId>marid-processors</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.marid</groupId>
      <artifactId>marid-test</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessors>
            <processor>org.marid.processors.CheckedFunctionalInterfaceProcessor</processor>
          </annotationProcessors>
          <annotationProcessorPaths>
            <path>
              <groupId>org.marid</groupId>
              <artifactId>marid-processors</artifactId>
              <version>${project.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
